--- a/src/main/resources/templates/views/common/header.html
+++ b/src/main/resources/templates/views/common/header.html
@@ -6,6 +6,7 @@
 <th:block th:fragment="header">
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container-fluid">
+            <a class="btn btn-primary" th:href="@{/main}">Home</a>
             <a class="navbar-brand" href="javascript:void(0)">Security</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
