--- a/src/main/resources/templates/views/main.html
+++ b/src/main/resources/templates/views/main.html
@@ -13,7 +13,10 @@
 
     <div class="container mt-3">
         <h1>Main</h1>
-        <a class="btn btn-primary" th:href="@{/board/list}">목록보기</a>
+        <a class="btn btn-primary" th:href="@{/qna/list}">QnA 목록보기</a>
+        <a class="btn btn-primary" th:href="@{/user/mypage}">Mypage</a>
+        <a class="btn btn-primary" th:href="@{/user/admin/authCheck}">관리자 페이지</a>
+
     </div>
 
 </body>
