--- a/src/main/resources/templates/views/main.html
+++ b/src/main/resources/templates/views/main.html
@@ -15,7 +15,7 @@
     <h1>Main</h1>
     <a class="btn btn-primary" th:href="@{/qna/list}">QnA 목록보기</a>
     <a class="btn btn-primary" th:href="@{/user/mypage}">Mypage</a>
-    <a class="btn btn-primary" th:href="@{/user/admin/authCheck}">관리자 페이지</a>
+    <a class="btn btn-primary" th:href="@{/admin/authCheck}">관리자 페이지</a>
 
 </div>
 
