--- a/src/main/resources/templates/views/qna/comment.html
+++ b/src/main/resources/templates/views/qna/comment.html
@@ -2,6 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
 
 <th:block th:fragment="comment">
     <script src="https://kit.fontawesome.com/51772bd9bd.js" crossorigin="anonymous"></script>
