--- a/src/main/resources/templates/views/qna/write.html
+++ b/src/main/resources/templates/views/qna/write.html
@@ -24,8 +24,7 @@
     <hr>
 
     <div class="row mt-5" th:if="${error }">
-        <div class="col-12 text-danger" th:text="${error}">   <!-- text-danger 이건 글씨를 빨갛게 보이게 한다.-->
-            <!--/* 에러메세지 */-->
+        <div class="col-12 text-danger" th:text="${error}">
         </div>
     </div>
 
