--- a/src/main/resources/templates/views/lender/admin/update.html
+++ b/src/main/resources/templates/views/lender/admin/update.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-    
+<th:block th:with="lender=${lender}">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,23 +11,27 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script th:src="@{/js/write.js}"></script>
+    <script th:src="@{/js/update.js}"></script>
 
-    <title>/lender/admin/write</title>
+    <title>/lender/admin/update</title>
 </head>
 <body>
 <!--/* 인증 header */-->
 <th:block th:insert="~{common/header::header}"></th:block>
 <div class="container mt-5" th:with="user=${#authentication.getPrincipal().getUser()}">
-    <div class="mb-3">사용자 아이디: [[${user.username}]]</div>
+    <div class="mb-3">사용자 아이디: [[${user.username}]]
+        <span class="float-end ms-4">등록일: [[${#temporals.format(lender.regdate, 'yyyy-MM-dd HH:mm:ss')}]]</span>
+    </div>
 
-    <form class="row align-items-center" th:action="@{/lender/admin/write}" method="post">
+    <form class="row align-items-center" th:action="@{/lender/admin/update}" method="post">
+        <input type="hidden" name="id" th:value="${lender.id}"/>
+
         <div class="col-6 w-25">
-            <input type="text" class="form-control" id="lenderName" name="lenderName" placeholder="사업장 이름" th:value="${lenderName}">
+            <input type="text" class="form-control" id="lenderName" name="lenderName" placeholder="사업장 이름" th:value="${lender.lenderName}">
         </div>
         <div class="mt-3">
             <select name="city" id="city" class="form-select w-25">
-                <option value="null" selected>도시</option>
+                <option value="${city}" selected>${lender.city.city}</option>
                 <th:block th:each="city : ${cityList}">
                     <option th:value="${city}" th:text="${city.city}"></option>
                 </th:block>
@@ -35,10 +39,10 @@
            
         </div>
         <div class="col-6 mt-3">
-            <input type="text" class="form-control" id="address" name="address" placeholder="상세주소(..구)" th:value="${address}">
+            <input type="text" class="form-control" id="address" name="address" placeholder="상세주소(..구)" th:value="${lender.address}">
         </div>
         <div class="col-6 mt-3">
-            <button type="submit" class="btn btn-outline-dark">사업장추가</button>
+            <button type="submit" class="btn btn-outline-dark">수정완료</button>
         </div>
         <span class="row mt-3" th:if="${error }">
             <div class="col-12 text-danger" th:text="${error }">
@@ -49,4 +53,5 @@
 
 </div>
 </body>
+</th:block>
 </html>
