--- a/src/main/resources/templates/views/lender/admin/update.html
+++ b/src/main/resources/templates/views/lender/admin/update.html
@@ -20,7 +20,7 @@
 <th:block th:insert="~{common/header::header}"></th:block>
 <div class="container mt-5" th:with="user=${#authentication.getPrincipal().getUser()}">
     <div class="mb-3">사용자 아이디: [[${user.username}]]
-        <span class="float-end ms-4">등록일: [[${#temporals.format(lender.regdate, 'yyyy-MM-dd HH:mm:ss')}]]</span>
+        <span class="float-end ms-4">등록일: [[${#temporals.format(lender.regDate, 'yyyy-MM-dd HH:mm:ss')}]]</span>
     </div>
 
     <form class="row align-items-center" th:action="@{/lender/admin/update}" method="post">
@@ -30,13 +30,12 @@
             <input type="text" class="form-control" id="lenderName" name="lenderName" placeholder="사업장 이름" th:value="${lender.lenderName}">
         </div>
         <div class="mt-3">
-            <select name="city" id="city" class="form-select w-25">
-                <option value="${city}" selected>${lender.city.city}</option>
+            <select name="cityId" id="city" class="form-select w-25">
                 <th:block th:each="city : ${cityList}">
-                    <option th:value="${city}" th:text="${city.city}"></option>
+                    <option th:value="${city.id}" th:text="${city.city}" th:selected="${city.id} == ${lender.city.id}"></option>
                 </th:block>
             </select>
-           
+
         </div>
         <div class="col-6 mt-3">
             <input type="text" class="form-control" id="address" name="address" placeholder="상세주소(..구)" th:value="${lender.address}">
