--- a/src/main/resources/templates/views/camp/admin/camping/list.html
+++ b/src/main/resources/templates/views/camp/admin/camping/list.html
@@ -40,7 +40,7 @@
             <td>[[${dto.id}]]</td>
             <td><a th:href="@{/camp/admin/camping/detail(id=${dto.id})}">[[${dto.camp_name}]]</a> </td>
             <td>[[${dto.content}]]</td>
-            <td>[[${dto.address)}]]</td>
+            <td>[[${dto.city}]] [[${dto.address}]]</td>
         </tr>
         </tbody>
     </table>
