--- a/src/main/resources/templates/views/camp/detail.html
+++ b/src/main/resources/templates/views/camp/detail.html
@@ -24,7 +24,7 @@
     <th:block th:insert="~{common/header::header}"></th:block>
 
     <div class="container mt-3">
-        <h2 id = dh2>[[${dto.name}]]</h2>
+        <h2 id = dh2>[[${dto.camp_name}]]</h2>
         <div id = detail>
             <section>
                 <div class=detail>
