--- a/src/main/resources/templates/views/camp/admin/camping/write.html
+++ b/src/main/resources/templates/views/camp/admin/camping/write.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
     <script th:src="@{/js/write.js}"></script>
 
     <title>캠핑장 등록</title>
 </head>
+
 <body>
 <th:block th:insert="~{common/header::header}"></th:block>
+
 <h2 id = wh2>캠핑장 등록</h2>
 <div id = write>
     <div id = wimage>
@@ -26,15 +26,27 @@
             <div class="col-12 text-danger" th:text="${error }">
                 <!--/* 에러메세지 */-->
             </div>
-        </div>
     </div>
+
+
     <form th:action="@{/camp/admin/camping/write}" method="post" enctype="Multipart/form-data">
+
+        <input type="hidden" class="form-control" id="user" placeholder="user" name="user" th:value="${user}">
 
         <div class = write>
             <label for="camp_name">캠핑장 이름:</label>
             <input type="text" class="form-control" id="camp_name" placeholder="캠핑장명" name="camp_name" th:value="${camp_name}">
         </div>
 
+        <div class = write>
+            <label>도시:</label>
+            <select>
+                <option>선택해주세요</option>
+                <option th:each="dto : ${list}" th:value ="${city}">[[${dto.city}]]</option>
+            </select>
+        </div>
+
+        <label>구역 번호:</label>-->
         <div class = write>
             <label for="content">소개:</label>
             <input type="text" class="form-control" id="content" placeholder="소개" name="content" th:value="${content}">
