--- a/src/main/resources/templates/views/camp/admin/campsite/list.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/list.html
@@ -23,8 +23,9 @@
 <th:block th:insert="~{common/header::header}"></th:block>
 <th:block th:with="dto=${list[0]}">
 <div class="container mt-3" >
-    <h2>목록 - [[${dto.camping.camp_name}</h2>
+    <h2>목록 - [[${dto.camping.camp_name}]]</h2>
     <hr>
+</div>
 </th:block>
     <!-- 목록 -->
     <table class="table table-hover">
@@ -37,10 +38,9 @@
         </thead>
         <tbody>
         <tr th:each="dto : ${list}">
-            <td>[[${dto.id}]]</td>
-            <td><a th:href="@{/camping/detail(id=${dto.id})}">[[${dto.camp_name}]]</a> </td>
+            <td><a th:href="@{/camp/admin/campsite/detail(id=${dto.id})}">[[${dto.number}]]</a> </td>
             <td>[[${dto.content}]]</td>
-            <td>[[${dto.address)}]]</td>
+            <td>[[${dto.price}]]</td>
         </tr>
         </tbody>
     </table>
@@ -48,7 +48,7 @@
 
     <div class="row">
         <div class="col-12">
-            <a class="btn btn-outline-dark" th:href="@{/camping/admin.write}">캠핑장 구역 등록</a>
+            <a class="btn btn-outline-dark" th:href="@{/camp/admin/campsite/write}">캠핑장 구역 등록</a>
         </div>
     </div>
 </div>
