--- a/src/main/resources/templates/views/camp/admin/campsite/write.html
+++ b/src/main/resources/templates/views/camp/admin/campsite/write.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script th:src="@{/js/write.js}"></script>
+
+    <title>구역 등록</title>
 </head>
+
 <body>
+<th:block th:insert="~{common/header::header}"></th:block>
+<th:block th:with="dto=${list}">
+<h2 id = wh2>구역 등록</h2>
+<div id = write>
+    <div id = wimage>
+        <div id = wimgbtn>
+            <button type = button id = btnAdd class="btn btn-outline-dark">이미지 등록</button>
+        </div>
+
+        <div class="row mt-5" th:if="${error }">
+            <div class="col-12 text-danger" th:text="${error }">
+                <!--/* 에러메세지 */-->
+            </div>
+        </div>
+
+
+        <form th:action="@{/camp/admin/campsite/write}" method="post" enctype="Multipart/form-data">
+            <input type="text" class="form-control" id="camping" placeholder="캠핑 id" name="camping" th:value="${camping.id}">
+            <div class = write>
+                <label for="number">구역 번호:</label>
+                <input type="text" class="form-control" id="number" placeholder="구역 번호" name="number" th:value="${number}">
+            </div>
+
+            <div class = write>
+                <label for="content">소개:</label>
+                <input type="text" class="form-control" id="content" placeholder="소개" name="content" th:value="${content}">
+            </div>
+
+            <div class = write>
+                <label for="price">가격:</label>
+                <input type="text" class="form-control" id="price" placeholder="가격" name="price" th:value="${price}">
+            </div>
+
+
+            <div id = wbutton>
+                <button type="submit" class="btn btn-outline-dark">등록완료</button>
+                <button type="button" class="btn btn-outline-dark" onclick="history.back()">돌아가기</button>
+            </div>
+        </form>
+    </div>
+</div>
+</th:block>
 
 </body>
 </html>
