--- a/src/main/resources/templates/views/camp/reserve.html
+++ b/src/main/resources/templates/views/camp/reserve.html
@@ -1,87 +1,90 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 
-<!-- <script th:if="${list == null} or ${#lists.size(list) <= 0}">
-        alert("해당 정보가 삭제되거나 없습니다");
-        history.back();
-    </script> -->
+<th:block th:with="dto=${camping}">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script th:src="@{/js/write.js}"></script>
 
-<th:block th:if="${list} and ${#lists.size(list) > 0}" th:with="dto=${list[0]}">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-        <link rel="stylesheet" type="text/css" th:href="@{/css/leisure/common.css}">
-
-        <script th:src="@{/js/detail.js}"></script>
-    </head>
+    <title>예약하기</title>
+</head>
 
     <body>
     <th:block th:insert="~{common/header::header}"></th:block>
-    <div class="container mt-3">
-        <h2 id = dh2>[[${dto.name}]]</h2>
 
-            <section>
-                <form name="frmDelete" th:action="@{/camp/reserveDelete}" method="post">
-                    <input type="hidden" name="id" th:value="${dto.id}">
-                </form>
+    <div class="container mt-3">
+        <h2 id = dh2>예약</h2>
+
+        <div class="row mt-5" th:if="${error }">
+            <div class="col-12 text-danger" th:text="${error }">
+                <!--/* 에러메세지 */-->
+            </div>
+        </div>
+
+                <form th:action="@{/camp/reserve}" method="post">
+
+                    <div class = write>
+                        <input type="hidden" class="form-control" id="user" placeholder="user" name="user" th:value="${user}">
+                    </div>
 
                 <div class=detail>
                     <label>캠핑장 이름:</label>
-                    <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.camp_name}]]</div>
+                    <div class="border bg-light rounded p-2" >[[${dto.camp_name}]]</div>
                 </div>
                 <div class=detail>
                     <label>주소:</label>
-                    <div class="border bg-light rounded p-2" >[[${dto.camping.city.city}]][[${dto.campsite.camping.address}]]</div>
+                    <div class="border bg-light rounded p-2" >[[${dto.address}]]</div>
                 </div>
+
                 <div class=detail>
                     <label>예약자 명:</label>
-                    <div class="border bg-light rounded p-2" >[[${dto.user.name}]]</div>
+                    <div class="border bg-light rounded p-2" >[[${name.name}]]</div>
                 </div>
 
-                <div class=detail>
-                    <label>구역 번호:</label>
-                    <select>
-                        <option th:each="dto : ${list}" th:value ="${dto.campsite.number}">[[${dto.campsite.number}]]</option>
-
-                    </select>
-                </div>
                 <div class=detail>
                     <label>캠핑장 소개:</label>
-                    <div class="border bg-light rounded p-2" >[[${dto.campsite.camping.content}]]</div>
+                    <div class="border bg-light rounded p-2" >[[${dto.content}]]</div>
                 </div>
-                <div class=detail>
-                    <label>구역 소개:</label>
-                    <div class="border bg-light rounded p-2" >[[${dto.campsite.content}]]</div>
-                </div>
+
                 <div class=detail>
                     <label>시작 날짜:</label>
-                    <input type="text" class="form-control" id="sdate" placeholder="시작 날짜" name="sdate" th:value="${sdate}">
+                    <input type="number" class="form-control" id="sdate" placeholder="입실 날짜" name="sdate" th:value="${sdate}">
                     <label>끝 날짜:</label>
-                    <input type="text" class="form-control" id="edate" placeholder="시작 날짜" name="edate" th:value="${edate}">
-                </div>
-                <div class=detail>
-                    <label>가격:</label>
-                    <div class="border bg-light rounded p-2" >[[${dto.campsite.price}]]</div>
+                    <input type="number" class="form-control" id="edate" placeholder="퇴실 날짜" name="edate" th:value="${edate}">
                 </div>
 
-
-
-
+                    <table class="table table-hover">
+                        <thead class="table-success">
+                        <tr>
+                            <th>번호</th>
+                            <th>소개</th>
+                            <th>가격</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="site : ${site}">
+<!--                            <td><input type="submit" name = "campsite" id = "campsite" th:value="${site.id}"></td>-->
+                            <td th:value="${site.number}">[[${site.number}]]</td>
+                            <td th:value="${site.content}" >[[${site.content}]]</td>
+                            <td th:value="${site.price}">[[${site.price}]]</td>
+                            <td><button type="submit" class="btn btn-outline-dark" name = "campsite" id = "campsite" th:value="${site.id}" >예약하기</button></td>
+                        </tr>
+                        </tbody>
+                    </table>
                 <div id = dbutton>
                     <!-- 하단 링크 -->
                     <a class="btn btn-outline-dark" th:href="@{/camp/list}">목록으로</a>
-                    <button type="submit" class="btn btn-outline-dark">예약</button>
+
 
                 </div>
 
+                </form>
                 <!-- 하단 링크 -->
-
-            </section>
         </div>
     </body>
 </th:block>
