--- a/src/main/resources/templates/views/user/mypage.html
+++ b/src/main/resources/templates/views/user/mypage.html
@@ -13,13 +13,9 @@
 <body>
 <th:block th:insert="~{common/header::header}"></th:block>
 
-<!--<div class="alert alert-warning alert-dismissible">-->
-<!--    <button type="button" class="btn-close" data-bs-dismiss="alert" id="w-alert"></button>-->
-<!--    관리자 확인 소요시간 2일정도 걸립니다. <br>-->
-<!--</div>-->
-
-<input class="btn" id="btn-join" value="LENDER 권한등록" data-bs-toggle="modal" data-bs-target="#myModal">
-<div class="modal fade" id="myModal">
+<div class="container mt-3">
+<input class="btn" id="btn-join" value="LENDER 권한등록" data-bs-toggle="modal" data-bs-target="#myModal2">
+<div class="modal fade" id="myModal2">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
 
@@ -47,8 +43,8 @@
     </div>
 </div>
 
-<input class="btn" id="btn-join2" value="CAMPING 권한등록" data-bs-toggle="modal" data-bs-target="#myModal2">
-<div class="modal fade" id="myModal2">
+<input class="btn" id="btn-join2" value="CAMPING 권한등록" data-bs-toggle="modal" data-bs-target="#myModal3">
+<div class="modal fade" id="myModal3">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
 
@@ -76,6 +72,6 @@
     </div>
 </div>
 
-
+</div>
 </body>
 </html>
