--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -7,6 +7,5 @@
     src : url("../font/NanumSquareR.ttf") format("truetype");
 }
 body {
-margin-bottom:400px;
-font-family: NanumSquare;
+font-family: NanumSquareNeo;
 }
