--- a/src/main/resources/templates/views/admin/authCheck.html
+++ b/src/main/resources/templates/views/admin/authCheck.html
@@ -5,37 +5,48 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
-  <title>Mypage</title>
+  <title>AuthCheck</title>
 </head>
 <body>
 <th:block th:insert="~{common/header::header}"></th:block>
-<div class="container mt-3">
-  <h1>권한 관리</h1>
+<div class="container mt-5">
+  <div class="conA">
+  <h1><b>권한 관리👤</b></h1>
   <p><br></p>
-  <table style="width:80%">
-    <tr>
-      <td>User</td>
-      <td>Authority</td>
-    </tr>
+  <table class="table table-hover">
+    <thead class="table-success">
+      <tr>
+        <td><b>User</b></td>
+        <td><b>Authority</b></td>
+        <td><b>O/X</b></td>
+      </tr>
+    </thead>
+    <tbody>
+
+
     <tr th:each="dto:${list}">
       <td>[[${dto.user.username}]]</td>
       <td>[[${dto.authority.name}]]</td>
-      <td class="d-flex justify-content-around mt-1">
+      <td class="d-flex">
         <form th:action="@{/admin/authAccept}" method="post">
           <input type="hidden" name="authreqId" th:value="${dto.id}">
           <input type="hidden" name="userId" th:value="${dto.user.id}">
           <input type="hidden" name="authId" th:value="${dto.authority.id}">
-          <button class="btn btn-success">수락</button>
+          <button style="border:0; padding:0;"><img th:src="@{/img/accept.png}" style="width: 40px; height: 40px; margin-right: 10px;"></button>
         </form>
         <form th:action="@{/admin/authRefuse}" method="post">
           <input type="hidden" name="authreqId" th:value="${dto.id}">
-          <button class="btn btn-danger">거절</button>
+          <button style="border:0; padding: 0;"><img th:src="@{/img/refuse.png}" style="width: 40px; height: 40px;"></button>
         </form>
       </td>
     </tr>
+    </tbody>
   </table>
+</div>
 
-  <a class="btn btn-primary" th:href="@{/admin/city}">▶지역 관리하러 가기</a>
+  <div class="container mt-3">
+    <a class="btn btn-primary" style="float:right; font-size: 17px;" th:href="@{/admin/city}">▶지역 관리하러 가기</a>
+  </div>
 
 </div>
 
