--- a/src/main/resources/templates/views/common/header.html
+++ b/src/main/resources/templates/views/common/header.html
@@ -2,54 +2,76 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/51772bd9bd.js"></script>
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <script th:src="@{/js/kakaoLogin.js}"></script>
+</head>
 
+<body>
 <th:block th:fragment="header">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm" style="background-color: rgb(211, 211, 211, 0.5);">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-item" th:href="@{/main}">
-                            <img th:src="@{/img/logo.jpeg}" alt="logo" width="200" height="100"/>
+                        <a class="nav-link" th:href="@{/main}">
+                            <img th:src="@{/img/logo.jpeg}" alt="logo" width="170" height="100" id="logo"/>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/camping/list}">캠핑예약</a>
+                        <a class="nav-link" th:href="@{/camp/list}" style="padding-top: 70px; color: black; font-size: 20px;"><b>캠핑예약</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/lender/item/list}">캠핑용품</a>
+                        <a class="nav-link" th:href="@{/lender/itemList}" style="padding-top: 70px; color: black; font-size: 20px;"><b>캠핑용품</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/qna/list}">QnA</a>
+                        <a class="nav-link" th:href="@{/qna/list}" style="padding-top: 70px; color: black; font-size: 20px;"><b>QnA</b></a>
+                    </li>
+                    <li class="nav-item" sec:authorize="isAuthenticated()">
+                        <a class="nav-link" th:href="@{/user/mypage}" style="padding-top: 70px; color: black; font-size: 20px;"><b>Mypage</b></a>
                     </li>
                     <li class="nav-item" sec:authorize="hasRole('ADMIN')">
-                        <a class="nav-link" th:href="@{/admin/authCheck}">관리자</a>
+                        <a class="nav-link" th:href="@{/admin/authCheck}" style="padding-top: 70px; color: blue; font-size: 20px;"><b>관리자</b></a>
                     </li>
                 </ul>
-                <a class="btn btn-primary" th:href="@{/user/mypage}">Mypage</a>
-                <a class="btn btn-primary" th:href="@{/coupon/write}">쿠폰 등록하기</a>
-
+                <a id="CouBtn" style="background-color: #8996C6; color: white; font-size:20px; text-decoration:none; border: 0px; border-radius:10%; padding: 7px; margin-right: 15px;" th:href="@{/coupon/write}">쿠폰 등록하기</a>
                 <a class="btn btn-primary" sec:authorize="isAnonymous()" data-bs-toggle="modal" data-bs-target="#myModal">Login</a>
+
                 <div class="modal fade" id="myModal">
                     <div class="modal-dialog modal-lg modal-dialog-centered">
                         <div class="modal-content">
                             <!-- Modal Header -->
                             <div class="modal-header">
-                                <h4 class="modal-title"><b>로그인</b></h4>
+                                <h4 class="modal-title" style="color: black; padding-right: 20px;"><b>간편로그인</b></h4>
+                                    <img th:src="@{/img/google.png}" style="display:inline; width: 70px; padding-right: 10px;">
+                                    <img th:src="@{/img/naver.png}" style="display:inline; width: 70px; padding-right: 10px;">
+                                    <form id="kakaoform" th:action="@{/user/apiLogin}" method="POST"></form>
+                                    <div onclick="loginWithKakao();" style="display:inline; width:70px;">
+                                        <a href="javascript:void(0)">
+                                            <img th:src="@{/img/kakao.png}">
+                                        </a>
+                                    </div>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                             </div>
                             <form name="form2" th:action="@{/user/login}" method="post">
-                                <div class="modal-body">
-                                        <div class="form-floating">
-                                            <input type="text" class="form-control" name="username" id="username" th:value="${username}" placeholder="ID" required>
-                                            <label for="username">ID</label>
-                                        </div>
-                                        <div class="form-floating mt-1">
-                                            <input type="password" class="form-control" name="password" id="password" value="" placeholder="Password" required>
-                                            <label for="password">Password</label>
-                                        </div>
-                                        계정이 없으신가요? <a th:href="@{/user/join}" class="join"><b>회원가입</b></a>
+                                <div class="modal-body" style="color: black; font-size: 17px;">
+                                <div class="apiLogin">
+                                </div>
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control" name="username" id="username" th:value="${username}" placeholder="ID" required>
+                                        <label for="username">ID</label>
+                                    </div>
+                                    <div class="form-floating mt-1">
+                                        <input type="password" class="form-control" name="password" id="password" value="" placeholder="Password" required>
+                                        <label for="password">Password</label>
+                                    </div>
+                                    계정이 없으신가요? <a th:href="@{/user/join}" class="join" style="color: black"><b>회원가입</b></a>
                                 </div>
                                 <div class="modal-footer">
                                     <input type="submit" class="btn btn-primary" value="로그인"></input>
@@ -59,18 +81,15 @@
                     </div>
                 </div>
 
-                <!-- 로그인 했을때는 username 과 로그아웃 form 보여주기 -->
                 <form th:action="@{/user/logout}" method="POST" sec:authorize="isAuthenticated()" th:with="user=${#authentication.getPrincipal().getUser()}">
-                    <!--TODO : 로그아웃후 다시 돌아오기 -->
                     <span class="d-flex">
-                        <span class="text-light p-2"><span>[[${user.username}]]</span> 님 환영합니다!(Points:<span>[[${user.point}]]</span>)</span>
+                        <span class="text p-2" ><span style="color:black; font-size: 20px;">[[${user.username}]] 님 환영합니다!(Point: [[${user.point}]])</span></span>
                         <span><button class="btn btn-danger" type="submit">Logout</button></span>
                       </span>
                 </form>
             </div>
         </div>
     </nav>
-
 </th:block>
-
+</body>
 </html>
