--- a/src/main/resources/templates/views/user/apiLogin.html
+++ b/src/main/resources/templates/views/user/apiLogin.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-    <script th:src="@{/js/kakaoLogin.js}"></script>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
-    <title>Home</title>
+    <link rel="stylesheet" type="text/css">
+    <title>API_LOGIN</title>
 </head>
 <body>
-<!--/* 인증 헤더 */-->
-<th:block th:insert="~{common/header::header}"></th:block>
 
-<div class="container mt-3">
-    <h1>Main</h1>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br>
-</div>
-
+<form id="frm" th:action="@{/user/login}" method="POST">
+    <input type="hidden" name="username" th:value="${username}">
+    <input type="hidden" name="password" th:value="${username.toUpperCase()}">
+</form>
 </body>
+<script>
+    const frm = document.getElementById("frm");
+    frm.submit();
+</script>
 </html>
-
-
