--- a/src/main/resources/templates/views/user/join.html
+++ b/src/main/resources/templates/views/user/join.html
@@ -6,20 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/join/join.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
     <title>회원가입</title>
 </head>
-
+<style>
+    .label{
+        font-size: 20px;
+    }
+    .loginBtn{
+        font-size: 20px;
+        padding: 10px;
+    }
+</style>
 <body>
 <!--/* 인증 헤더 */-->
 <th:block th:insert="~{common/header::header}"></th:block>
 
-<div class="conA">
+<div class="conA" style="padding-top: 3%">
     <form method="POST" th:action="@{/user/join}">
-        <div class="conB">
-            <h2 class="joinTxt">회원가입</h2>
+        <div class="conB" style="text-align: left; padding-bottom: 3em;">
+            <h2 class="joinTxt"><b>회원가입</b></h2>
             <hr>
-
             <div class="row mt-5">
                 <div class="col-12 text-danger" th:text="${error }">
                 </div>
@@ -34,17 +42,17 @@
                     <label for="username" class="label">아이디</label>
                     <input type="text" class="form-control" id="username" name="username" placeholder="아이디 입력" th:value="${username }" required>
                 </div>
-                <div class="form-group mt-5">
+                <div class="form-group mt-3">
                     <label for="password" class="label">비밀번호</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호 입력" required>
                     <input type="hidden" name="provider" th:value="general">
                 </div>
-                <div class="form-group mt-5">
+                <div class="form-group mt-3">
                     <label for="re_password" class="label">비밀번호 확인</label>
                     <input type="re_password" class="form-control" id="re_password" name="re_password" placeholder="비밀번호 확인" required>
                     <input type="hidden" name="provider" th:value="general">
                 </div>
-                <div class="form-group mt-5">
+                <div class="form-group mt-3">
                     <label for="phone" class="label">전화번호</label>
                     <input type="phone" class="form-control" id="phone" name="phone" placeholder="전화번호 입력" required>
                     <input type="hidden" name="provider" th:value="general">
