--- a/src/main/resources/templates/views/lender/admin/itemUpdate.html
+++ b/src/main/resources/templates/views/lender/admin/itemUpdate.html
@@ -48,6 +48,10 @@
 
                             </div>
                             <button type="button" id="btnAdd" class="btn btn-secondary">추가</button>
+                            <!--/* 이미지인 경우 보여주기 */-->
+                            <div th:each="fileDto : ${item.fileList}" th:if="${fileDto.image}">
+                                <img th:src="@{'/upload/item/' + ${fileDto.file}}" class="img-thumbnail" alt="Cinque Terre">
+                            </div>
                         </div>
                     </div>
                     <!-- 첨부파일 -->
